--- a/assets/sass/index.css
+++ b/assets/sass/index.css
@@ -265,44 +265,21 @@ a:hover {
   color: #ffc600;
 }
 
-/*=====================================================publication section========================================*/
-#tes:after {
-  content: "";
+/*=====================================================latest section========================================*/
+.late:after {
+  content: " ";
   width: 70px;
   height: 4px;
-  display: block;
-  background-color: white;
-}
-
-#testimonial {
-  background: linear-gradient(rgba(0, 0, 0, 0.747), rgba(0, 0, 0, 0.473)), url(../images/bg-2.jpg);
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 80vh;
-}
-#testimonial #tes {
-  color: white;
-}
-#testimonial .testimonial1 #tesimg {
-  position: relative;
-}
-#testimonial .testimonial1 .icon {
   background-color: #ffc600;
-  height: 40px;
-  width: 40px;
-  text-align: center;
-  border-radius: 50px;
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  position: relative;
-  left: 70px;
-  top: -110px;
+  display: block;
 }
 
-#con {
-  max-width: 1320px;
-  margin: 0 auto;
-  padding: 5rem 0.5rem;
+#latest .late {
+  color: #07294d;
+}
+#latest .late1 .late-text a h4:hover {
+  color: #ffc600;
+}
+#latest .latecol2-text a h4:hover {
+  color: #ffc600;
 }/*# sourceMappingURL=index.css.map */
