--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -313,55 +313,49 @@ a:hover{
     }
 }
 
-/*=====================================================publication section========================================*/
-
-#tes:after{
-    content: '';
+/*=====================================================latest section========================================*/
+.late:after{
+    content: ' ';
     width: 70px;
     height: 4px;
+    background-color: #ffc600;
     display: block;
-    background-color: white;
 }
-#testimonial{
-    background: linear-gradient(rgba(0, 0, 0, 0.747),rgba(0, 0, 0, 0.473)),  url(../images/bg-2.jpg);
-    background-position: center center;
-    background-size: cover;
-    background-repeat: no-repeat;
+
+#latest{
+    .late{
+        color: #07294d;
+    }
+    .late1{
+        .late-text{
+            a{
+                h4{
+                    &:hover{
+                        color: #ffc600;
+                    }
+                }
+            }
+        }
+    }
     
-    height: 80vh;
-    #tes{
-        color: white;
-    }
-
-    .testimonial1 {
-        #tesimg{
-            position: relative;
+        .latecol2-text{
+            a{
+                h4{
+                    &:hover{
+                        color: #ffc600;
+                    }
+                }
+            }
         }
-        .icon{
-            background-color: #ffc600;
-            height: 40px;
-            width: 40px;
-            text-align: center;
-            border-radius: 50px;
-            align-items: center;
-            display: flex;
-            justify-content: center;
-            position: relative;
-            left: 70px;
-            top: -110px;
-        }
-    }
-
-
-
-
+    
 }
 
-#con{
-    max-width: 1320px;
-    margin: 0   auto;
-    padding: 5rem .5rem;
-}
+
+
+
+
+    
+
 
 
 
