--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -36,6 +36,13 @@ a:hover{
     padding-bottom: 100px;
 }
 
+.section-padding1{
+    padding-top: 100px;
+}
+
+
+
+
 .btn{
     padding: 10px 20px;
     text-align: center;
@@ -168,7 +175,7 @@ a:hover{
 
 /*=====================================================carousel section========================================*/
 .c-img{
-    height: 80vh;
+    height: 60vh;
 }
 
 .c-overlay{
@@ -193,6 +200,19 @@ a:hover{
     font-size: 40px;
     font-weight: 600;
         }
+    }
+}
+@media (max-width:576px) {
+    .carousel-inner{
+        position: relative;
+    }
+    .carousel-caption{
+        position: absolute !important;
+        left: 2px !important;
+        top:14px !important;
+    }
+    .carousel-caption p{
+        display: none;
     }
 }
 
@@ -263,8 +283,8 @@ a:hover{
                 border-radius: 100px;
                 padding: 15px;
                 position: absolute;
-                left: 200px;
-                top: -1px;
+                left: 250px;
+                top: 229px;
             }
         }
         #href{
@@ -351,10 +371,151 @@ a:hover{
 }
 
 
+.footer-top{
+    .list-inline{
+        .list-inline-item{
+            a{
+                i{
+                    color: white;
+                    background-color: #021d3a;
+                    padding: 10px;
+                    border-radius: 50px;
+
+                    &:hover{
+                        background-color: #ffc600;
+                        color: black;
+                    }
+                }
+            }
+        }
+    }
+
+    .footer-link{
+        #list{
+            li{
+                a{
+                    color: white;
+                    &:hover{
+                        color: #ffc600;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
 
 
 
     
+/*=====================================================Design section========================================*/
+body{
+    background-color: #2125293f;
+}
+#cat_section{
+    .cat{
+        .cat_img{
+            position: relative;
+        }
+
+        .cat_text{
+            position: relative;
+            left: 10px;
+            bottom: 70px;
+            h5{
+                color: white;
+                transition: 0.2s ease-in-out;
+                &:hover{
+                    color: #ffc600;
+                }
+            }
+        }
+        
+    }
+
+    #form{
+        input[type=text],input[type=email],input[type=number]{
+            height: 50px;
+            width: 400px;
+            padding: 20px;
+            border: none;
+
+            
+        }
+
+        input:focus{
+            outline: none;
+        }
+
+    }
+}
+
+
+/*=====================================================Category section========================================*/
+
+   .course-sect{
+    background-color: #021d3a;
+    width:40%;
+    text-align: center;
+    padding: 40px;
+    position: relative;
+    left: 700px;
+    bottom: 145px;
+
+    h5{
+        color: white ;
+    }
+   }
+
+/*=====================================================Counting section========================================*/
+#counting{
+    background:linear-gradient(to right,#021d3ab6,#021d3aa2), url(../images/bg-2.jpg);
+    background-position: center center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 150px;
+}
+
+/*=====================================================Counting2 section========================================*/
+#count2{
+    background-color: white;
+
+    .count-bg{
+        background:linear-gradient(to right,#021d3a3a,#021d3aea), url(../images/bg-3.jpg);
+
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 80px;
+    color: white ;
+
+        .count-text2{
+            a{
+                h3{
+                    &:hover{
+                        color: #ffc600 !important;
+                    }
+                }
+            }
+        }
+
+
+    }
+}
+
+/*=====================================================footer section========================================*/
+#footsection{
+    position: relative;
+    #last-child{
+        position: absolute;
+        left: 1230px;
+        top: 200px;
+    }
+}
+
+
+
 
 
 
