--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -643,3 +643,23 @@ body{
     }
 
 
+/*=====================================================coursehtml section========================================*/
+#course_2{
+    .course_intro{
+        .course_form{
+                input{
+                    background-color: red;
+                    width: 150px !important;
+                }
+                button{
+                    i{
+                        background-color: red;
+                        border: none;
+                    }
+        }
+            
+        }
+    }
+}
+
+
